--- a/microservicecloud-config-client.yml
+++ b/microservicecloud-config-client.yml
@@ -1,4 +1,4 @@
-﻿spring:
+spring:
   profiles:
     active:
       - dev
@@ -12,8 +12,8 @@ spring:
     name: microservicecloud-config-client
 eureka: 
   client: 
-     server-url: 
-        defaultZone: http://eureka7001.com:7001/eureka/
+     service-url: 
+        defaultZone: http://eureka-dev.com:7001/eureka/
 ---
 server:
   port: 8202
@@ -23,5 +23,5 @@ spring:
     name: microservicecloud-config-client
 eureka: 
   client: 
-     server-url: 
-        defaultZone: http://eureka7001.com:7001/eureka/  
+     service-url: 
+        defaultZone: http://eureka-test.com:7001/eureka/  
