--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -1,8 +1,7 @@
 ﻿spring:
   profiles:
     active:
-      - dev
-  
+      - dev 
 ---
 server:
   port: 8001
@@ -32,23 +31,20 @@ mybatis:
 eureka:
   client: #客户端注册进eureka服务列表内
     service-url: 
-       defaultZone: http://localhost:7001/eureka
-      #defaultZone: http://eureka7001.com:7001/eureka/    
+       defaultZone: http://localhost:7001/eureka   
   instance:
-    instance-id: microservicecloud-dept8001
+    instance-id: dept-8001.com
     prefer-ip-address: true     #访问路径可以显示IP地址   
      
 info: 
-  app.name: atguigu-microservicecloud
+  app.name: atguigu-microservicecloud-springcloudconfig01
   company.name: www.atguigu.com
   build.artifactId: $project.artifactId$
   build.version: $project.version$
 ---
 server:
   port: 8001
-  
-
-    
+   
 spring:
    profiles: test
    application:
@@ -76,11 +72,11 @@ eureka:
        defaultZone: http://localhost:7001/eureka
       #defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/   
   instance:
-    instance-id: microservicecloud-dept8001
+    instance-id: dept-8001.com
     prefer-ip-address: true     #访问路径可以显示IP地址   
      
 info: 
-  app.name: atguigu-microservicecloud
+  app.name: atguigu-microservicecloud-springcloudconfig02
   company.name: www.atguigu.com
   build.artifactId: $project.artifactId$
   build.version: $project.version$
