--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -31,7 +31,7 @@ mybatis:
 eureka:
   client: #客户端注册进eureka服务列表内
     service-url: 
-       defaultZone: http://localhost:7001/eureka   
+       defaultZone: http://eureka7001:7001/eureka   
   instance:
     instance-id: dept-8001.com
     prefer-ip-address: true     #访问路径可以显示IP地址   
@@ -69,7 +69,7 @@ mybatis:
 eureka:
   client: #客户端注册进eureka服务列表内
     service-url: 
-       defaultZone: http://localhost:7001/eureka
+       defaultZone: http://eureka7001:7001/eureka
       #defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/   
   instance:
     instance-id: dept-8001.com
