--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -11,36 +11,37 @@ spring:
    application:
     name: microservicecloud-config-dept-client 
    datasource:
-    type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
-    driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
-    url: jdbc:mysql://localhost:3306/clouddb1             # 数据库名称
+    type: com.alibaba.druid.pool.DruidDataSource            
+    driver-class-name: org.gjt.mm.mysql.Driver             
+    url: jdbc:mysql://localhost:3306/clouddb1           
     username: root
     password: root
     dbcp2:
-      min-idle: 5                                           # 数据库连接池的最小维持连接数
-      initial-size: 5                                       # 初始化连接数
-      max-total: 5                                          # 最大连接数
-      max-wait-millis: 200                                  # 等待连接获取的最大超时时间
+      min-idle: 5                                           
+      initial-size: 5                                       
+      max-total: 5                                          
+      max-wait-millis: 200                                  
       
 mybatis:
-  config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
-  type-aliases-package: com.atguigu.springcloud.entities    # 所有Entity别名类所在包
+  config-location: classpath:mybatis/mybatis.cfg.xml        
+  type-aliases-package: com.atguigu.springcloud.entities    
   mapper-locations:
-  - classpath: mybatis/mapper/**/*.xml                        # mapper映射文件
-  
+  - classpath: mybatis/mapper/**/*.xml                       
+ 
 eureka:
-  client: #客户端注册进eureka服务列表内
+  client: 
     service-url: 
-       defaultZone: http://eureka7001:7001/eureka   
+       defaultZone: http://eureka7001.com:7001/eureka   
   instance:
     instance-id: dept-8001.com
-    prefer-ip-address: true     #访问路径可以显示IP地址   
+    prefer-ip-address: true       
      
 info: 
   app.name: atguigu-microservicecloud-springcloudconfig01
   company.name: www.atguigu.com
   build.artifactId: $project.artifactId$
   build.version: $project.version$
+  
 ---
 server:
   port: 8001
@@ -50,33 +51,27 @@ spring:
    application:
     name: microservicecloud-config-dept-client 
    datasource:
-    type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
-    driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
-    url: jdbc:mysql://localhost:3306/clouddb2             # 数据库名称
+    type: com.alibaba.druid.pool.DruidDataSource           
+    driver-class-name: org.gjt.mm.mysql.Driver              
+    url: jdbc:mysql://localhost:3306/clouddb2             
     username: root
     password: root
     dbcp2:
-      min-idle: 5                                           # 数据库连接池的最小维持连接数
-      initial-size: 5                                       # 初始化连接数
-      max-total: 5                                          # 最大连接数
-      max-wait-millis: 200                                  # 等待连接获取的最大超时时间
+      min-idle: 5                                           
+      initial-size: 5                                      
+      max-total: 5                                          
+      max-wait-millis: 200  
+      
 mybatis:
-  config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
-  type-aliases-package: com.atguigu.springcloud.entities    # 所有Entity别名类所在包
+  config-location: classpath:mybatis/mybatis.cfg.xml        
+  type-aliases-package: com.atguigu.springcloud.entities   
   mapper-locations:
-  - classpath: mybatis/mapper/**/*.xml                        # mapper映射文件
+  - classpath: mybatis/mapper/**/*.xml                        
   
 eureka:
-  client: #客户端注册进eureka服务列表内
+  client: 
     service-url: 
-       defaultZone: http://eureka7001:7001/eureka
-      #defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/   
+       defaultZone: http://eureka7001.com:7001/eureka  
   instance:
     instance-id: dept-8001.com
-    prefer-ip-address: true     #访问路径可以显示IP地址   
-     
-info: 
-  app.name: atguigu-microservicecloud-springcloudconfig02
-  company.name: www.atguigu.com
-  build.artifactId: $project.artifactId$
-  build.version: $project.version$
+    prefer-ip-address: true   
